Update event details in index.html

--- a/index.html
+++ b/index.html
@@ -149,14 +149,9 @@
   </h2>
 
   <p class="indent">
-      <div class="underlined">Dec, 2025</div>
-      I'm attending <a href="https://qatar.worldsummit.ai/">World Summit AI 2025</a>. See you in Doha!</br>
-    </p>
-
-    <p class="indent">
-      <div class="underlined">Jan, 2025</div>
-      I'm attending <a href="https://2025.mena.ml/">MenaML Winter School 2025</a>. See you in Doha!</br>
-    </p>
+    <div class="underlined">Jan, 2026</div>
+    I'm attending <a href="https://mena.ml/">MenaML Winter School 2026</a>. See you in Jaddah!</br>
+  </p>
 
   <h2>
     <span class="morelinks">
