Add 2026 publication 'CallShield' to pubs.html
Added a new publication for 2026 with details and references.

--- a/pubs.html
+++ b/pubs.html
@@ -25,6 +25,16 @@
       </span><a href="index.html">&laquo;&nbsp;Home</a>
     </h2>
 
+    <h3>2026</h3>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2601.09327">CallShield: Secure Caller Authentication over Real-Time Audio Channels</a></span></div>
+      <small>
+        Mouna Rabhi, Yazan Boshmaf, Mashael Alsabah, Shammur Chowdhury, Mohamed Hefeeda, and Issa Khalil
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:2601.09327, Jan 2026</div>
+      </small>
+    </p>
+
     <h3>2025</h3>
     <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2504.14985">aiXamine: Simplified LLM Safety and Security</a></span></div>
