Add new section for aiXamine with details

--- a/index.html
+++ b/index.html
@@ -144,6 +144,19 @@
   </p>
 
   <h2>
+    <span class="morelinks"><a href="systems.html">&raquo;&nbsp;all</a></span>
+    Systems
+  </h2>
+
+  <p>
+    <div class="title"><span class="pdf"><a class=title href="https://aixamine.qcri.org">aiXamine</a></span></div>
+    <small>
+      Safety, security, and privacy benchmarking of text LLMs
+      <div class=ref><i>More than 45 tests across 10 different benchmarks</i><br>
+    </small>
+  </p>
+
+  <h2>
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
