Change 'Systems' to 'Development' in index.html

--- a/index.html
+++ b/index.html
@@ -145,14 +145,13 @@
 
   <h2>
     <span class="morelinks"><a href="systems.html">&raquo;&nbsp;all</a></span>
-    Systems
+    Development
   </h2>
 
   <p>
-    <div class="title"><span class="pdf"><a class=title href="https://aixamine.qcri.org">aiXamine</a></span></div>
+    <div class="title"><a class=title href="https://aixamine.qcri.org">aiXamine</a></div>
     <small>
-      Safety, security, and privacy benchmarking of text LLMs
-      <div class=ref><i>More than 45 tests across 10 different benchmarks</i><br>
+      Safety, security, and privacy benchmarking for text LLMs
     </small>
   </p>
 
