--- a/index.html
+++ b/index.html
@@ -151,7 +151,16 @@
   <p>
     <div class="title"><a class=title href="https://aixamine.qcri.org">aiXamine</a></div>
     <small>
-      Safety, security, and privacy benchmarking for text LLMs
+      Safety, Security, and Privacy (SSP) benchmarking for text LLMs
+      <div class=ref><i>Over 45 tests spanning 10 distinct SSP evaluation areas</i><br>
+    </small>
+  </p>
+
+  <p>
+    <div class="title"><a class=title href="https://fanar.qa">Fanar</a></div>
+    <small>
+      Arabic-centric multimodal GenAI platform
+      <div class=ref><i>SOTA Arabic performance with fact checking and attribution</i><br>
     </small>
   </p>
 
