--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </p>
 
   <p>
-    <div class="title"><a class=title href="https://fanar.qa">Fanar</a></div>
+    <div class="title"><a class=title href="https://fanar.qa/en">Fanar</a></div>
     <small>
       Arabic-centric multimodal GenAI platform
       <div class=ref><i>SOTA Arabic performance with fact checking and attribution</i><br>
