--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="title"><a class=title href="https://fanar.qa/en">Fanar</a></div>
     <small>
       Arabic-centric multimodal GenAI platform
-      <div class=ref><i>SOTA Arabic performance with fact checking and attribution</i><br>
+      <div class=ref><i>SOTA Arabic LLM with fact checking and attribution</i><br>
     </small>
   </p>
 
