--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
   </p>
 
   <h2>
-    <span class="morelinks"><a href="systems.html">&raquo;&nbsp;all</a></span>
-    Development
+    Active Development
   </h2>
 
   <p>
