--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     #contact td.l { text-align: right; font-style: italic; padding-right: 12px; }
     .title { margin: 0 0 3px 0; }
     .students { margin-top: 9px; padding: 18px 0 0 0; border-top: 1px solid #bbb; }
+    .plugins { margin-top: 18px; padding: 18px 0 18px 0; border-top: 1px solid #bbb; }
     .altlink { margin-left: 6px; font-size: 90%; }
     .rule { margin-top: 20px; padding-top: 14px; border-top: 1px solid #bbb; }
     .footer{ margin: 15px 0 0 0; display: table; text-align: center; margin-left: auto; margin-right: auto; }
@@ -102,6 +103,34 @@
     <span class="announcement info">If you are a <b>student</b> and interested in working with me, please click <a href="students.html">here!</a></span>
   </div>
 
+  <div class="plugins">
+    If you have time, check out the following public <b>systems</b> that I contributed to:
+    <p>
+      <div class="title"><a class=title href="https://aixamine.qcri.org">aiXamine</a></div>
+      <small>
+        Security benchmarking for text LLMs
+        <div class=ref><i>Over 45 tests across 10 evaluation areas</i><br>
+      </small>
+    </p>
+
+    <p>
+      <div class="title"><a class=title href="https://fanar.qa/en">Fanar</a></div>
+      <small>
+        Arabic-centric multimodal GenAI platform
+        <div class=ref><i>Arabic LLM with fact checking and attribution</i><br>
+      </small>
+    </p>
+  </span>
+
+  <p>
+      <div class="title"><a class=title href="https://cyberxpert.qcri.org">CyberXpert</a></div>
+      <small>
+        Agentic cybersecurity AI for analysts
+        <div class=ref><i>Under active developement!</i><br>
+      </small>
+    </p>
+  </span>
+
   </td><td class="column" id="right">
 
   <h2 class="top">
@@ -141,26 +170,6 @@
   <p>
     <div class="underlined">Web Automation</div>
     Socialbots, single sign-on, privacy
-  </p>
-
-  <h2>
-    Active Development
-  </h2>
-
-  <p>
-    <div class="title"><a class=title href="https://aixamine.qcri.org">aiXamine</a></div>
-    <small>
-      Safety, Security, and Privacy (SSP) benchmarking for text LLMs
-      <div class=ref><i>Over 45 tests spanning 10 distinct SSP evaluation areas</i><br>
-    </small>
-  </p>
-
-  <p>
-    <div class="title"><a class=title href="https://fanar.qa/en">Fanar</a></div>
-    <small>
-      Arabic-centric multimodal GenAI platform
-      <div class=ref><i>SOTA Arabic LLM with fact checking and attribution</i><br>
-    </small>
   </p>
 
   <h2>
